exercise4/condor/377.0-error.txt
  File "train.py", line 128
    plt.plot(fit.history["loss"])
    ^
IndentationError: unexpected indent
